# dap-vala

./: .gitattributes  .gitignore  Makefile  meta.yaml
assistants/crt/: vala.yaml
assistants/crt/vala/: console.yaml  gtk.yaml
doc/vala/: NOTICE
files/crt/vala/console/: Makefile.am  configure.ac  main.vala
files/crt/vala/console/src/: Makefile.am
files/crt/vala/gtk/: configure.ac
files/crt/vala/gtk/data/: Makefile.am  interface.ui
files/crt/vala/gtk/src/: Makefile.am  main.vala
